--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ p {
 	text-decoration: none;
 	background: #356abc;
 	color: white;
-	padding: 10px 18px;
+	padding: 13px 30px;
 	display: inline-block;
 	margin-top: 25px;
+	border-radius:20px:
 }
